tests/snapshots/examples_fixtures/type_classes__ConsoleLoggerExample__Flow__Logger.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/ConsoleLoggerExample/Flow/Logger.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `ConsoleLoggerExample.Flow.Logger` doesn't match file path `examples/type_classes/ConsoleLoggerExample/Flow/Logger.flx`.

  examples/type_classes/ConsoleLoggerExample/Flow/Logger.flx:3:1
  |
3 | module ConsoleLoggerExample.Flow.Logger {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
